[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dsp-slam"
version = "0.0.1"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.10"',
    "addict",
    "plyfile",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dsp_slam"]